# 2026_Analysis_regex

./: CMakeLists.txt  README.md
scripts/: build.bat  build.sh  run_regex.bat  run_regex.sh  run_tests.bat
src/: main.cpp
tests/: test_basic_matching.cpp  test_character_classes_and_literals.cpp  test_flags.cpp  test_groups.cpp  test_iterators.cpp  test_lookarounds.cpp  test_match_flags_extended.cpp  test_quantifiers_and_alternation.cpp  test_regex_compilation.cpp  test_replace.cpp
